---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/unknown_arg_none_defined.txt
---
 Rendering error --> [tpl:1:3]
  |
1 | {{ :display_name(hello=1) }}
  |    ^---
  = Argument `hello` not found in definition.
